2003-05-20  Brian Warner  <warner@lothar.com>

	* mailcrypt.texi (Signing): Move documentation of mc-pgp-user-id
	variables to the 'Signing a Message' section. Explain use of hex
	keyids to deal with multiple identically-named keys.

2003-05-19  Brian Warner  <warner@lothar.com>

	* mailcrypt.el (mc-modes-alist): Add support for the Wanderlust
	mail mode. Thanks to Fumitoshi UKAI for the patch.

2002-12-01  Brian Warner  <warner@lothar.com>

	* tests/remailer/gtkwatcher.glade
	* tests/remailer/gtkwatcher.py
	(WatcherGUI.do_dst_popup): tweak popups to pick the right message

2002-11-30  Brian Warner  <warner@lothar.com>

	* tests/remailer/gtkwatcher.glade
	* tests/remailer/gtkwatcher.py: add popup menus for message actions
	(WatcherGUI.do_update): show send time in local timezone, not GMT
        add send time to Received Messages popup

	* tests/remailer/watcher.py: add ability to flush old messages,
	abandon them, query for age of outstanding ones. Make all msgids
	integers. Fix use of default NNTP port.
	(NewsWatcher.poll): Handle missing messages
	(Watcher.txtime): code to get send time of a message

2002-11-29  Brian Warner  <warner@lothar.com>

	* tests/gpg-testcases/E.latin1.e1r
	* tests/gpg-testcases/CS.latin1.s1v
	* tests/gpg-testcases/E.e1re3re4r
	* tests/make_gpg_testcases.py (Latin1_CS_Case, Latin1_E_Case, EE_Case):
	add some new test cases

	* tests/remailer/gtkwatcher.glade
	* tests/remailer/gtkwatcher.gladep: rewrite using glade-2
	
	* tests/remailer/gtkwatcher.py (WatcherGUI, GtkWatcher)
	* tests/remailer/watcher.py (Watcher): rewrite: now uses gtk2, Maildir
	class, DNotify if available (or 10-second poll if not).

	* tests/remailer/maildir.py
	* tests/remailer/maildirgtk.py
	* tests/remailer/maildirtwisted.py: classes to watch Maildirs using
	various	event loops.

	* tests/remailer/dnotify.py: python interface to linux 2.4.x DNotify
	facility, to get a signal when a directory changes

2002-09-26  Brian Warner  <warner@lothar.com>
